fix: Complete monitoring automation fixes for consistent setup
- Fix Grafana AI Backend Status panel to use correct namespace (kubeskippy-system)
- Update Ollama deployment to use kubeskippy-system namespace consistently
- Fix setup.sh dashboard count check to handle empty values
- Add check-grafana.sh utility script for dashboard verification
- Update setup.sh to handle background processes with timeout
- Improve error handling in demo apps deployment

These changes ensure the demo runs consistently in a single setup command
with all monitoring components working correctly out of the box.

--- a/demo/grafana/grafana-demo.yaml
+++ b/demo/grafana/grafana-demo.yaml
@@ -213,7 +213,7 @@ data:
           "targets": [
             {
               "datasource": {"type": "prometheus", "uid": "PBFA97CFB590B2093"},
-              "expr": "up{job=\"ollama\"} or kube_pod_status_phase{namespace=\"demo-apps\", pod=~\"ollama.*\", phase=\"Running\"}",
+              "expr": "sum(kube_pod_container_status_running{namespace=\"kubeskippy-system\", pod=~\"ollama-.*\"}) or vector(0)",
               "legendFormat": "AI Backend",
               "refId": "A"
             }
