--- a/tests/ollama-deployment.yaml
+++ b/tests/ollama-deployment.yaml
@@ -1,13 +1,9 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: ai-nanny-system
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ollama
-  namespace: ai-nanny-system
+  namespace: kubeskippy-system
 spec:
   replicas: 1
   selector:
@@ -44,7 +40,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ollama-service
-  namespace: ai-nanny-system
+  namespace: kubeskippy-system
 spec:
   selector:
     app: ollama
@@ -58,7 +54,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: ollama-pull-model
-  namespace: ai-nanny-system
+  namespace: kubeskippy-system
 spec:
   template:
     spec:
